<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SigninFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        style="@style/TextViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/ic_waving_hand"
        android:drawablePadding="5dp"
        android:drawableTint="@color/lynch"
        android:text="@string/welcome_back"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/elevate_your_hr_management_with_talento"
        android:textColor="@color/dusty_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_intro" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        style="@style/InputEdittext"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_5dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        style="@style/InputEdittext"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_5dp"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/portage"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginHorizontal="@dimen/_20dp"
        style="@style/LongButton"
        android:text="@string/log_in"
        android:background="@drawable/custom_long_button"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>